--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                 </a>
                             </div>
                             <div class="gridbox">
-                                <a href="https://codepen.io/techakhilc-me" target="blank">
+                                <a href="https://codepen.io/techakhil-me" target="blank">
                                     <img class="social"
                                         src="https://cdn.discordapp.com/attachments/765973145852575746/775398802442027048/codepen.png"></img>
                                 </a>
